@@ -81,4 +81,23 @@ struct ImGui_ImplWGPU_RenderState
     WGPURenderPassEncoder       RenderPassEncoder;
 };
 
+//-------------------------------------------------------------------------
+// Internal Helpers
+// Those are currently used by our example applications.
+//-------------------------------------------------------------------------
+
+// (Optional) Helper to create a surface on macOS/Wayland/X11/Window
+#if defined(IMGUI_IMPL_WEBGPU_BACKEND_WGPU) || defined(IMGUI_IMPL_WEBGPU_BACKEND_DAWN) && !defined(__EMSCRIPTEN__)
+struct ImGui_ImplWGPU_CreateSurfaceInfo
+{
+    WGPUInstance    Instance;
+    const char*     System;      // "cocoa"   | "wayland"   | "x11"     | "win32"
+    void*           RawWindow;   // NSWindow* | 0           | Window    | HWND
+    void*           RawDisplay;  // 0         | wl_display* | Display*  | 0
+    void*           RawSurface;  //           | wl_surface* | 0         | 0
+    void*           RawInstance; // 0         | 0           | 0         | HINSTANCE
+};
+WGPUSurface ImGui_ImplWGPU_CreateWGPUSurfaceHelper(ImGui_ImplWGPU_CreateSurfaceInfo* info);
+#endif
+
 #endif // #ifndef IMGUI_DISABLE
